Ha Viet nop bai tap tao danh sach HTML

--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=<h2>Khai báo một biến sử dụng var</h2>
+
+   
 </head>
 <body>
-    
+    <h2>Khai báo một biến sử dụng var</h2>
+
+<p id="demo"></p>
+
+<script>
+var  x = 10;
+// x= 10
+{  
+    var x = 2;
+    // x=2
+}
+// giờ x= 2
+document.getElementById("demo").innerHTML = x;
+</script>
 </body>
 </html>
